iniciando post, agregando desc en autores. Me quedo grande imprimir una variable :p

--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -8,6 +8,11 @@ layout: default
       <h1 class="title-page">Autores</h1>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <p>Estos increibles tutoriales, tips y demos se logran gracias a nuestros increibles miembros de la comunidad. <br/><br/>Revisa que nos motiva <a href="http://bit.ly/2o4ekwi" target="_blank">aquí.</a></p>
+    </div>
+  </div>
   <div class="row wrap top">
     <div class="col col-100 col-md-80 col-lg-80 content-authors">
       {% for author in site.authors %}
