--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -136,12 +136,11 @@ div.versions{
     background-color: $primary-color;
     color: white;
     margin-right: 3px;
-    padding: 0px 2px;
-    margin-top: 2px;
+    span{
+      padding: 0px 4px;
+    }
     span:last-child{
-      margin-left: 5px;
       font-weight: bold;
-      border-left: 1px solid white;
     }
   }
 }
