hard work in news articles

--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,6 +1,6 @@
 <div class="row wrap subscribe-blog">
   <div class="col col-100">
-    <p><i>¿Disfrutas este artículo? Suscríbete a nuestro curso por correo. Aprende a hacer Apps en <strong>Ionic 2.</strong></i></p>
+    <p><i>¿Disfrutas este artículo? Suscríbete a nuestro curso por correo. Aprende a hacer Apps en <strong>Ionic.</strong></i></p>
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
     <div id="mlb2-3764889" class="ml-subscribe-form ml-subscribe-form-3764889">
