Removing Libro Link, Agregando Reviews en el pie de Posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,7 +67,7 @@ layout: default
       </article>
       <article>
         <hr/>
-        <p>¿Quieres saber más? Suscríbete a nuestro Newsletter o únete a nuestro canal en <a href="http://goo.gl/forms/ZCEc0cr3jydgK2wv1">Slack</a> y mantente atento.
+        <p>Te ha gustado el Post? No te olvides dejarnos una <a href="https://www.facebook.com/pg/ionbook/reviews/">Calificación</a> en Facebook y darle Like al <a href="https://www.facebook.com/pg/ionbook">Facebook Page</a>.
         Espero sea de utilidad y sigan programando :)</p>
         <p>Por: <a href="{{ author.url }}"><strong>{{ author.name }}</strong></a></p>
       </article>
