:bug: implement mailchimp with amp

--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -68,7 +68,8 @@
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-  <script async type="text/javascript">
+  <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
+  <!--<script async type="text/javascript">
     (function(p,u,s,h){
         p._pcq=p._pcq||[];
         p._pcq.push(['_currentTime',Date.now()]);
@@ -78,6 +79,6 @@
         s.src='https://www.ion-book.com/js/cd961b7fc40d92661a578254340c720d.js';
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
-    })(window,document);
+    })(window,document);-->
   </script>
 </head>
