--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #4E8EF7;
 $secondary-color: #2557AA;
+$success-color: #57aa25;
 $title-color: #333;
 $box-background-color: #6E6891;
 $footer-background-color: #422AC4;
