--- a/_includes/general/subscribe.html
+++ b/_includes/general/subscribe.html
@@ -1,27 +1,24 @@
-<div id="mlb2-3764889" class="ml-subscribe-form ml-subscribe-form-3764889">
-    <div class="ml-vertical-align-center">
-      <div class="subscribe-form ml-block-success" style="display:none">
-          <div class="form-section mb0">
-              <p>{{ site.subscribe.success_text }}</p>
-          </div>
-      </div>
-      <form class="ml-block-form" action="//app.mailerlite.com/webforms/submit/s3l4z5" data-id="246353" data-code="s3l4z5" method="POST" target="_blank">
-          <div class="subscribe-form">
-              <div class="form-section form-section-mail">
-                  <div class="form-group ml-field-email ml-validate-required ml-validate-email">
-                      <input type="text" name="fields[email]" class="form-control" placeholder="Email*" value="">
-                  </div>
-              </div>
-              <div class="form-section">
-                <input type="hidden" name="ml-submit" value="1" />
-                <button type="submit" class="btn btn-primary btn-round btn-register primary">
-                    {{ site.subscribe.btn_text }}
-                </button>
-                <button disabled="disabled" class="btn btn-primary btn-round btn-register loading" style="display: none;" type="button" >
-                    <img src="//static.mailerlite.com/images/rolling.gif" width="20" height="20" style="width: 20px; height: 20px;">
-                </button>
-              </div>
-          </div>
-      </form>
-  </div>
+<div class="ion-form-subscribe">
+  <form method="POST"
+    action-xhr="//ion-book.us13.list-manage.com/subscribe/post?u=e940b700cbe988699b03ab77c&amp;id=e8641062ff"
+    target="_top">
+    <div class="input-email">
+      <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Tu correo" required>
+    </div>
+    <div class="button-submit">
+      <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-round btn-success">
+        {{ site.subscribe.btn_text }}
+      </button>
+    </div>
+    <div submit-success class="submit-success">
+      <template type="amp-mustache">
+        <p>{{ site.subscribe.success_text }}</p>
+      </template>
+    </div>
+    <div submit-error class="submit-error">
+      <template type="amp-mustache">
+        <p>Ups! ocurrio un error intentalo de nuevo</p>
+      </template>
+    </div>
+  </form>
 </div>
