--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
    <div class="ion-form-subscribe">
-    <form method="POST"
+    <!--<form method="POST"
         action-xhr="//ion-book.us13.list-manage.com/subscribe/post?u=e940b700cbe988699b03ab77c&amp;id=e8641062ff"
         target="_top">
         <div class="input-email">
@@ -25,7 +25,8 @@
             <p>Ups! ocurrio un error intentalo de nuevo</p>
         </template>
         </div>
-    </form>
+      </form>-->
+      <a href="http://eepurl.com/b5l-Ff" target="_blank" class="btn btn-round btn-success">{{ site.subscribe.btn_text }}</a>
     </div>
   </div>
 </div>
