--- a/_includes/general/subscribe.html
+++ b/_includes/general/subscribe.html
@@ -1,24 +1,20 @@
 <div class="ion-form-subscribe">
-  <form method="POST"
-    action-xhr="//ion-book.us13.list-manage.com/subscribe/post?u=e940b700cbe988699b03ab77c&amp;id=e8641062ff"
-    target="_top">
+  <!--<form  action="//ion-book.us13.list-manage.com/subscribe/post?u=e940b700cbe988699b03ab77c&amp;id=e8641062ff"
+    method="post" target="_top"
+    id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
     <div class="input-email">
       <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Tu correo" required>
     </div>
     <div class="button-submit">
+      <div class="hidden" aria-hidden="true">
+        <input type="text" name="b_e940b700cbe988699b03ab77c_e8641062ff" tabindex="-1" value="">
+      </div>
       <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-round btn-success">
         {{ site.subscribe.btn_text }}
       </button>
     </div>
-    <div submit-success class="submit-success">
-      <template type="amp-mustache">
-        <p>{{ site.subscribe.success_text }}</p>
-      </template>
-    </div>
-    <div submit-error class="submit-error">
-      <template type="amp-mustache">
-        <p>Ups! ocurrio un error intentalo de nuevo</p>
-      </template>
-    </div>
-  </form>
+  </form>-->
+  <a href="http://eepurl.com/b5l-Ff" target="_blank" class="btn btn-round btn-success">{{ site.subscribe.btn_text }}</a>
 </div>
+
+
