--- a/_sass/general/_subscribe.scss
+++ b/_sass/general/_subscribe.scss
@@ -10,6 +10,11 @@
 
 .ion-form-subscribe{
   display: block;
+  a.btn-success{
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+  }
   form{
     &.user-invalid{
       .button-submit{
@@ -33,6 +38,10 @@
       }
     }
     .button-submit{
+      .hidden{
+        position: absolute;
+        left: -5000px;
+      }
       button[type="submit"]{
         width: 100%;
       }
@@ -53,6 +62,10 @@
 }
 @media screen and (min-width: $min-width-medium) and (max-width: $max-width-medium) {
   .ion-form-subscribe{
+    a.btn-success{
+      width: 30%;
+      display: block;
+    }
     form{
       display: flex;
       .input-email{
@@ -78,6 +91,10 @@
 }
 @media screen and (min-width: $min-width-large) {
   .ion-form-subscribe{
+    a.btn-success{
+      width: 30%;
+      display: block;
+    }
     form{
       display: flex;
       .input-email{
