implement legal markdown

--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -97,3 +97,12 @@
 .icon-social-html5:before {
   content: "\78";
 }
+.icon-social-javascript:before {
+  content: "\79";
+}
+.icon-social-css3:before {
+  content: "\7a";
+}
+.icon-code:before {
+  content: "\41";
+}
