--- a/_includes/blog/disqus.html
+++ b/_includes/blog/disqus.html
@@ -1,3 +1,9 @@
+<!--<amp-iframe width=600 height=140
+            layout="responsive"
+            sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
+            resizable
+            src="/js/disqus.html#hash">
+</amp-iframe>-->
 <div align="center">
   <div id="disqus_thread"></div>
   <script>
