--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -67,6 +67,7 @@
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
+  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   <!--<script async type="text/javascript">
     (function(p,u,s,h){
         p._pcq=p._pcq||[];
@@ -77,6 +78,6 @@
         s.src='https://www.ion-book.com/js/cd961b7fc40d92661a578254340c720d.js';
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
-    })(window,document);-->
-  </script>
+    })(window,document);
+  </script>-->
 </head>
