--- a/_includes/blog/disqus.html
+++ b/_includes/blog/disqus.html
@@ -1,10 +1,10 @@
-<!--<amp-iframe width=600 height=140
+<amp-iframe width=600 height=140
             layout="responsive"
             sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
             resizable
-            src="/js/disqus.html#hash">
-</amp-iframe>-->
-<div align="center">
+            src="http://amp.ng-classroom.com/amp.html#{{ post.url }}">
+</amp-iframe>
+<!-- <div align="center">
   <div id="disqus_thread"></div>
   <script>
   (function() { // DON'T EDIT BELOW THIS LINE
@@ -16,3 +16,4 @@
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
+-->
