YOLO, quien sabe cual es el id que se debe mandar en el hash

--- a/_includes/blog/disqus.html
+++ b/_includes/blog/disqus.html
@@ -2,7 +2,8 @@
             layout="responsive"
             sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
             resizable
-            src="http://amp.ng-classroom.com/amp.html#{{ post.url }}">
+            src="https://amp.ng-classroom.com/amp.html#{{ page.id }}">
+            <div overflow></div>
 </amp-iframe>
 <!-- <div align="center">
   <div id="disqus_thread"></div>
