--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -65,9 +65,7 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
-  <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
-  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   <!--<script async type="text/javascript">
     (function(p,u,s,h){
         p._pcq=p._pcq||[];
@@ -80,4 +78,14 @@
         h.parentNode.insertBefore(s,h);
     })(window,document);
   </script>-->
+
+<!-- TODO refactoring -->
+{% if page.title != "Home" and page.title != "Blog" %}
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+{% endif%}
+
+{% if page.title == "Home" %}
+<script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+{% endif%}
+
 </head>
