Solucionado Disqus error

--- a/_includes/blog/disqus.html
+++ b/_includes/blog/disqus.html
@@ -2,7 +2,7 @@
             layout="responsive"
             sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
             resizable
-            src="https://amp.ng-classroom.com/amp.html#{{ page.id }}">
+            src="https://amp.ng-classroom.com/amp.html#{{ page.id }}#https://www.ion-book.com{{page.url}}">
             <div overflow></div>
 </amp-iframe>
 <!-- <div align="center">
