:bug: fix errors

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@ layout: default
           </div>
           <p>Y luego</p>
           <div class="highlighter-rouge">
-            <pre class="highlight"><code>ionic state restore</code></pre>
+            <pre class="highlight"><code>ionic cordova prepare</code></pre>
           </div>
           <p>esto es para descargar todas las dependencias del proyecto.</p>
         </div>
