:bug: fix error

--- a/_includes/blog/disqus.html
+++ b/_includes/blog/disqus.html
@@ -1,8 +1,8 @@
-<amp-iframe width="600"
+<amp-iframe width="600" height="300"
             layout="responsive"
             sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
             resizable
-            src="https://amp.ng-classroom.com/amp.html#https://www.ion-book.com{{page.url}}">
+            src="https://amp.ng-classroom.com/amp.html#{{ page.id }}#https://www.ion-book.com{{page.url}}">
             <div overflow></div>
 </amp-iframe>
 <!-- <div align="center">
