--- a/_includes/general/subscribe.html
+++ b/_includes/general/subscribe.html
@@ -14,7 +14,7 @@
       </button>
     </div>
   </form>-->
-  <a href="http://eepurl.com/b5l-Ff" target="_blank" class="btn btn-round btn-success">{{ site.subscribe.btn_text }}</a>
+  <a href="http://www.ng-classroom.com/p/curso-profesional-ionic-2-0?ref=ionbook" target="_blank" class="btn btn-round btn-success">Ir al Curso Profesional</a>
 </div>
 
 
