--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,32 +1,10 @@
 <div class="row wrap subscribe-blog">
   <div class="col col-100">
-    <p><i>¿Disfrutas este artículo? Suscríbete a nuestro curso por correo. Aprende a hacer Apps en <strong>Ionic.</strong></i></p>
+    <p><i>¿ Quieres crear esa App que soñaste?  Aprende a usar <strong>Ionic</strong> como un Profesional con nuestro Curso</i></p>
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
    <div class="ion-form-subscribe">
-    <!--<form method="POST"
-        action-xhr="//ion-book.us13.list-manage.com/subscribe/post?u=e940b700cbe988699b03ab77c&amp;id=e8641062ff"
-        target="_top">
-        <div class="input-email">
-        <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Tu correo" required>
-        </div>
-        <div class="button-submit">
-        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-round btn-success">
-            {{ site.subscribe.btn_text }}
-        </button>
-        </div>
-        <div submit-success class="submit-success">
-        <template type="amp-mustache">
-            <p>{{ site.subscribe.success_text }}</p>
-        </template>
-        </div>
-        <div submit-error class="submit-error">
-        <template type="amp-mustache">
-            <p>Ups! ocurrio un error intentalo de nuevo</p>
-        </template>
-        </div>
-      </form>-->
-      <a href="http://eepurl.com/b5l-Ff" target="_blank" class="btn btn-round btn-success">{{ site.subscribe.btn_text }}</a>
+      <a href="http://www.ng-classroom.com/p/curso-profesional-ionic-2-0?ref=ionbook" target="_blank" class="btn btn-round btn-success">Ir al Curso Profesional</a>
     </div>
   </div>
 </div>
