:beers: dynamic video and include topics

--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -72,7 +72,7 @@
 <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
 {% endif%}
 
-{% if page.title == "Yolo" %}
+{% if page.video %}
 <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 {% endif%}
 
