--- a/_includes/general/banner-slack.html
+++ b/_includes/general/banner-slack.html
@@ -4,10 +4,10 @@
       <div class="icon icon-slack"></div>
     </div>
     <div class="col col-67 col-md-75 col-lg-80">
-      <h3>{{ site.banner_slack.title }}</h3>
-      <p>{{ site.banner_slack.text }}</p>
+      <h3>{{ site.data.home.banner_slack.title }}</h3>
+      <p>{{ site.data.home.banner_slack.text }}</p>
       <a href="{{ site.banner_slack.url }}" class="btn btn-primary btn-round btn-join" target="_blank">
-        {{ site.banner_slack.btn_text   }}
+        {{ site.data.home.banner_slack.btn_text   }}
       </a>
     </div>
   </div>
