--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -3,8 +3,8 @@
   <div class="content">
     <div id="banner" class="row wrap">
       <div class="col col-100 col-md-60 col-lg-60">
-        <h1 class="title">{{ site.home.banner_title  }}</h1>
-        <p class="text">{{ site.home.banner_text  }}</p>
+        <h1 class="title">{{ site.data.home.banner_title  }}</h1>
+        <p class="text">{{ site.data.home.banner_text  }}</p>
         {% include general/subscribe.html %}
       </div>
       <div class="col col-100 col-md-40 col-lg-40">
