--- a/_includes/home/posts.html
+++ b/_includes/home/posts.html
@@ -1,8 +1,8 @@
 <div class="content content-posts-home">
   <div class="row">
     <div class="col">
-     <h2 class="title">{{ site.home.blog_title }}</h2>
-     <p class="text-center">{{ site.home.blog_text }}</p>
+     <h2 class="title">{{ site.data.home.blog_title }}</h2>
+     <p class="text-center">{{ site.data.home.blog_text }}</p>
     </div>
   </div>
   <div class="row wrap baseline">
