--- a/_includes/home/topics.html
+++ b/_includes/home/topics.html
@@ -1,6 +1,6 @@
 <div class="content content-topics">
   <div class="row wrap">
-    {% for topic in site.home.topics %}
+    {% for topic in site.data.home.topics %}
       <div class="col col-100 col-md-50 col-lg-33 topic">
         <div>
           <div class="row center">
