--- a/_includes/home/video.html
+++ b/_includes/home/video.html
@@ -1,7 +1,7 @@
 <div class="content content-video">
    <div class="row">
      <div class="col col-100">
-        <h2 class="title">{{ site.home.topics_title }}</h2>
+        <h2 class="title">{{ site.data.home.topics_title }}</h2>
      </div>
    </div>
   <div class="row wrap">
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="col col-100 col-md-40 col-lg-40">
-      <p>{{ site.home.topics_text }}</p>
+      <p>{{ site.data.home.topics_text }}</p>
       <ul class="techs">
         <li class="angular"></li>
         <li class="js"></li>
