--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -15,7 +15,7 @@ layout: default
   </div>
   <div class="row wrap top">
     <div class="col col-100 col-md-80 col-lg-80 content-authors">
-      {% for author in site.authors %}
+      {% for author in site.data.authors %}
       <div class="author">
         <div class="row wrap center">
           <div class="col col-100 col-md-20 col-lg-20">
