--- a/_layouts/meetups.html
+++ b/_layouts/meetups.html
@@ -10,7 +10,7 @@ layout: default
   </div>
   <div class="row wrap top">
     <div class="col col-100 col-md-80 col-lg-80 content-authors">
-      {% for meetups in site.meetups %}
+      {% for meetups in site.data.meetups %}
         <div class="author">
           <div class="row wrap top">
             <div class="col col-100 col-md-20 col-lg-20">
