:bug: fix errors

--- a/_includes/general/banner-course.html
+++ b/_includes/general/banner-course.html
@@ -2,10 +2,10 @@
   <div class="content">
     <div class="row wrap center">
       <div class="col col-100 col-md-60 col-lg-60">
-        <p>{{ site.data.home.banner_course.text }}</p>
+        <p>{{ site.data.general.banner_course.text }}</p>
       </div>
       <div class="col col-100 col-md-40 col-lg-40">
-        <a href="{{ site.banner_course.url }}" target="_blank" class="btn btn-primary btn-round btn-course">{{ site.data.home.banner_course.btn_text }}</a>
+        <a href="{{ site.banner_course.url }}" target="_blank" class="btn btn-primary btn-round btn-course">{{ site.data.general.banner_course.btn_text }}</a>
       </div>
     </div>
   </div>
