--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -6,7 +6,7 @@
         {% assign count = 0 %}
         {% for tag in page.tags %}
           {% for post in site.posts %}
-            {% if post.tags contains tag and count < site.blog.count_related_posts and post.title != page.title %}
+            {% if post.tags contains tag and count < site.data.general.blog.count_related_posts and post.title != page.title %}
             {% assign count = count | plus: 1 %}
             <div class="col col-100 col-md-33 col-lg-100">
               {% include blog/article_right.html %}
