--- a/_includes/home/posts.html
+++ b/_includes/home/posts.html
@@ -15,7 +15,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <a href="/blog" class="btn btn-primary btn-round btn-articles center-block">{{ site.home.blog_btn_text }}</a>
+      <a href="/blog" class="btn btn-primary btn-round btn-articles center-block">{{ site.data.home.blog_btn_text }}</a>
     </div>
   </div>
 </div>
