--- a/_includes/home/slack.html
+++ b/_includes/home/slack.html
@@ -1,7 +1,11 @@
 <div class="content content-slack">
   <div class="row">
-    <div class="col col-100 offset-md-25 col-md-50 offset-lg-25 col-lg-50">
+    <div class="col col-50 col-md-50 col-lg-50">
       {% include general/banner-slack.html %}
     </div>
+    <div class="col col-50 col-md-50 col-lg-50">
+      {% include general/banner-ionhangout.html %}
+    </div>
+    
   </div>
 </div>
