fixing bug in url

--- a/_includes/general/banner-ionhangout.html
+++ b/_includes/general/banner-ionhangout.html
@@ -6,7 +6,7 @@
     <div class="col col-67 col-md-75 col-lg-80">
       <h3>{{ site.data.general.banner_hangouts.title }}</h3>
       <p>{{ site.data.general.banner_hangouts.text }}</p>
-      <a href="{{ site.banner_hangouts.url }}" class="btn btn-primary btn-round btn-join" target="_blank">
+      <a href="{{ site.data.general.banner_hangouts.url }}" class="btn btn-primary btn-round btn-join" target="_blank">
         {{ site.data.general.banner_hangouts.btn_text   }}
       </a>
     </div>
