:memo: rewrite article 'validations in forms'

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
     {% if page.repo %}
     <div class="col col-100 col-md-100 col-lg-20">
       <a href="{{ page.repo }}" class="btn btn-primary btn-round center-block btn-icon btn-demo" target="_blank">
-        <div class="icon icon-social-octocat"></div> Ver demo
+        <div class="icon icon-social-octocat"></div> Ver código
       </a>
     </div>
     {% endif %}
@@ -42,7 +42,7 @@ layout: default
         <div class="text">{{ content }}</div>
         {% if page.repo %}
         <a href="{{ page.repo }}" class="btn btn-primary btn-round center-block btn-icon btn-demo" target="_blank">
-          <div class="icon icon-social-octocat"></div> Ver demo
+          <div class="icon icon-social-octocat"></div> Ver código
         </a>
         {% endif %}
         {% if page.laucher %}
