updating banners and broken links

--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,10 +1,10 @@
 <div class="row wrap subscribe-blog">
   <div class="col col-100">
-    <p><i>¿ Quieres crear esa App que soñaste?  Aprende a usar <strong>Ionic</strong> como un Profesional con nuestro Curso</i></p>
+    <p>¿ Te gusta este articulo ? <i>No te pierdas ninguna actualización uniendote al newsletter.</i></p>
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
    <div class="ion-form-subscribe">
-      <a href="http://www.ng-classroom.com/p/curso-profesional-ionic-2-0?ref=ionbook" target="_blank" class="btn btn-round btn-success">Ir al Curso Profesional</a>
+      <a href="http://eepurl.com/b5l-Ff" target="_blank" class="btn btn-round btn-success">Me quiero unir.</a>
     </div>
   </div>
 </div>
