atributo logo en publisher

--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -16,7 +16,6 @@
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "logo": "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/logo.png?alt=media&token=f3083d69-2f6e-4033-bffa-6c8160d01a7c",
         "mainEntityOfPage":{
             "@type":"WebPage",
             "@id":"{{site.path}}{{ page.url }}"
@@ -35,7 +34,8 @@
         },
         "publisher": {
             "@type": "Organization",
-            "name": "ion-book"
+            "name": "ion-book",
+            "logo": "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/logo.png?alt=media&token=f3083d69-2f6e-4033-bffa-6c8160d01a7c"
         },
         "datePublished": "{{ page.date | date: "%-d %B %Y" }}",
         "dateModified": "{{ page.date | date: "%-d %B %Y" }}"
