logo in metadata

--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -35,7 +35,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "ion-book",
-            "logo": "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/logo.png?alt=media&token=f3083d69-2f6e-4033-bffa-6c8160d01a7c"
+            "logo": "hhttps://www.ion-book.com/images/logo.png"
         },
         "datePublished": "{{ page.date | date: "%-d %B %Y" }}",
         "dateModified": "{{ page.date | date: "%-d %B %Y" }}"
