--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -25,3 +25,8 @@
     </div>
   </footer>
 </div>
+<!-- Install Service Worker -->
+<amp-install-serviceworker src="/sw.js"
+  data-iframe-src="https://www.ion-book.com/sw.html"
+  layout="nodisplay">
+</amp-install-serviceworker>
