--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -12,7 +12,15 @@
   <link rel="amphtml" href="{{ page.url | replace:'index.html','' | prepend: site.path }}" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.path }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml"| prepend: site.path }}" />
-  <link rel="manifest" href="manifest.json">
+  <!-- PWA Stuff -->
+  <link rel="manifest" href="{{ "/manifest.json"| prepend: site.path }}">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#4E8EF7"> 
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#4E8EF7">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#4E8EF7">
+
   <script type="application/ld+json">
     {
         "@context": "http://schema.org",
@@ -80,11 +88,4 @@
 {% endif%}
 <script async custom-element="amp-install-serviceworker"
   src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
-
-<!-- Install Service Worker -->
-<amp-install-serviceworker src="/sw.js"
-  data-iframe-src="https://www.ion-book.com/sw.html"
-  layout="nodisplay">
-</amp-install-serviceworker>
-
 </head>
