--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -13,7 +13,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.path }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml"| prepend: site.path }}" />
   <!-- PWA Stuff -->
-  <link rel="manifest" href="{{ "/manifest.json"| prepend: site.path }}">
+  <link rel="manifest" href="{{ "manifest.json"| prepend: site.path }}">
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#4E8EF7"> 
   <!-- Windows Phone -->
