fixing styles + service worker fixes

--- a/_sass/general/_banner_slack.scss
+++ b/_sass/general/_banner_slack.scss
@@ -2,7 +2,7 @@
   border: 1px solid $secondary-color;;
   border-radius: 4px;
   padding: $padding;
-  margin: 50px 0px;
+  margin: 5px;
   display: block;
   color: $secondary-color;
   h3{
