--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -28,5 +28,8 @@
 <!-- Install Service Worker -->
 <amp-install-serviceworker src="/sw.js"
   data-iframe-src="https://www.ion-book.com/sw.html"
-  layout="nodisplay">
+  layout="nodisplay"
+  data-no-service-worker-fallback-url-match=".*"
+  data-no-service-worker-fallback-shell-url="https://www.ion-book.com/pwa">
+  >
 </amp-install-serviceworker>
