--- a/_includes/home/slack.html
+++ b/_includes/home/slack.html
@@ -1,9 +1,9 @@
 <div class="content content-slack">
-  <div class="row">
-    <div class="col col-50 col-md-50 col-lg-50">
+  <div class="row wrap">
+    <div class="col col-100 col-md-100 col-lg-50">
       {% include general/banner-slack.html %}
     </div>
-    <div class="col col-50 col-md-50 col-lg-50">
+    <div class="col col-100 col-md-100 col-lg-50">
       {% include general/banner-ionhangout.html %}
     </div>
     
